@@ -2,7 +2,6 @@ version 0.10
 ============
 
 - make nimble part of the distribution
-- implement 'procCall'
 - split idetools into separate tool
 - split docgen into separate tool
 
